@@ -22,7 +22,6 @@ CXXFLAGS = -I../../include \
            $(CGAL_CXXFLAGS) \
            $(LONG_NAME_PROBLEM_CXXFLAGS) \
            $(OPTIM_OPT) \
-           $(DEBUG_OPT) \
            $(OTHER_CXXFLAGS)
 
 #---------------------------------------------------------------------#
