@@ -1,3 +1,7 @@
+3 April 2004 Sylvain Pion
+- Regenerate demo/example makefiles to remove debug options,
+  which makes PGCC pass.
+
 Version 1.0.2 (10 February 2004) [rursu]
 - Updated headers in examples
 
